# fastapi-python

./: .dockerignore  .gitignore  README.md
backend/: .mypy.ini  .ruff.toml  Makefile  importanize.json  main.py  pyproject.toml  requirements.txt
backend/app/: registrar.py
backend/app/api/: router.py
backend/app/api/v1/: resource.py
backend/app/crud/: crud_resource.py  crud_task.py
backend/app/do/: base.py  resource.py  task.py
backend/app/model/: resource_model.py
backend/app/schema/: resource_schema.py
backend/app/service/: resource_service.py
backend/common/: log.py  model.py  schema.py
backend/common/enum/: resource.py  task.py
backend/common/exception/: errors.py  exception_handler.py
backend/common/response/: response_code.py  response_schema.py
backend/core/: base.py
backend/libs/: conf.py
backend/libs/database/: db_mysql.py  session.py
backend/migrations/: create_migration.sql  migrate.py
backend/migrations/up/: v1.0.0.sql
backend/pkg/crud_plus/: crud.py
backend/tests/test_in_ci/: test_demo.py
backend/tests/test_local/: test_resource.py
backend/utils/: serializers.py  str.py  timezone.py
